# infra-setup

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD-ORDER.md  INFRA-CLI.md  MULTIPLATFORM.md  README.md  REGSYNC-USAGE.md  bashrc.github.sh  build-base.sh  build-custom.sh  build-scratch.sh  build.sh  components.yml  dagger.json  docker-compose.base.yml  docker-compose.custom.yml  docker-compose.scratch.yml  export-variables.sh  export-vars.sh  hadolint.sh  import-charts-test.yml  import-charts.sh  import-charts.yml  justfile  main.py  pyproject.toml  regsync-archive.yml  regsync.yml  retag.sh  variables.yml
.dagger/: README.md  go.mod  go.sum  main.go
121-classless-route-calc/: README.md  opt121.py
buildpacks/: builder-22.toml  builder-24.toml
charts/: index.yaml
cluster/: common.tf
dex-name-generator/: Dockerfile  Makefile  main.go
docs/: aptly.md  axis.md  broccoli.md  clustered_storage_guide.md  conda.md  dell_x1026_ssl.md  elastic.md  fio.md  gdm.md  gitlab.md  gl-mifi.md  glusterfs.md  google-authenticator.md  haproxy.md  instances.md  intranet.md  ipa.md  iscsi-aa.md  iser.md  jdk.md  jira.md  k8s.md  keycloak.md  linux.md  loadavg_and_cpu.md  lvm.md  m3db.md  mailserver.md  mdadm.md  mellanox.md  network-checklist.md  network.md  new_esxi_host.md  nextcloud.md  nexus.md  nfs-ganesha.md  nomad.md  nsx.md  pacemaker.md  resize_part.md  (+9 more)
elasticsearch-pbkdf2-generator/: elasticsearch-pbkdf2.py
gitlab/: archive-image.sh  build-image.sh  env.sh  import-images-local.sh  import-images.sh  mirror-homebrew.sh
heroku-buildpacks/: .gitignore  (+7 more)
(+2488 files in other folders)
